tests/expectations/compiler/strings/string.out
namespace = "Compile"
expectation = "Fail"
outputs = ['''
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:6:9
     |
   6 |         let str:string = "a a a";
     |         ^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:6:26
     |
   6 |         let str:string = "a a a";
     |                          ^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:7:19
     |
   7 |         if(str == "b b  b") {
     |                   ^^^^^^^^
''']
